<resources>
    <string name="app_name">MyMessenger</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="select_photo">select photo</string>
    <string name="back_to_registration">Back to registration.</string>
    <string name="default_notification_channel_id">default</string>
</resources>
