<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        tools:context=".ui.RegisterActivity">


    <Button
            android:id="@+id/select_photo_button_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounder_photo_register"
            android:textColor="@android:color/white"
            android:text="@string/select_photo"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selected_photo_image_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_width="2dp"
            app:layout_constraintTop_toTopOf="@+id/select_photo_button_register"
            app:layout_constraintEnd_toEndOf="@+id/select_photo_button_register"
            app:layout_constraintStart_toStartOf="@+id/select_photo_button_register"
            app:layout_constraintBottom_toBottomOf="@+id/select_photo_button_register"/>

    <EditText
            android:id="@+id/login_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edittext_register"
            android:hint="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_photo_button_register"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""/>

    <EditText
            android:id="@+id/email_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rounded_edittext_register"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/login_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/login_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/login_edittext_register" android:autofillHints=""/>

    <EditText
            android:id="@+id/pass_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rounded_edittext_register"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_register" android:autofillHints=""/>
    <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pass_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/pass_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/pass_edittext_register"
            android:background="@drawable/rounded_button_register"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/register"/>
    <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_register"/>

    <include layout="@layout/loading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>

</android.support.constraint.ConstraintLayout>